--- a/KnightNews/KKNewsPreviewViewController.xib
+++ b/KnightNews/KKNewsPreviewViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KKNewsPreviewViewController">
             <connections>
                 <outlet property="articleAuthorLabel" destination="hNX-7m-21M" id="JcO-tN-hcr"/>
+                <outlet property="articleDateLabel" destination="688-WW-aIg" id="Pvg-fj-Dh5"/>
                 <outlet property="articleTitleLabel" destination="IYT-CC-OAr" id="dXo-pE-Puf"/>
                 <outlet property="articleWebView" destination="Uxc-fF-3Id" id="I0o-qy-Xjm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -20,16 +21,19 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYT-CC-OAr">
                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                    <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="20"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="19"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
-                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                        <rect key="frame" x="20" y="72" width="360" height="23"/>
-                    </variation>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNX-7m-21M">
                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                    <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="15"/>
+                    <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="14"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="688-WW-aIg">
+                    <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                    <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -37,86 +41,77 @@
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </webView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="688-WW-aIg">
-                    <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                    <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="15"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Uxc-fF-3Id" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="3km-fe-hNV">
                     <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                 </constraint>
-                <constraint firstItem="Uxc-fF-3Id" firstAttribute="top" secondItem="hNX-7m-21M" secondAttribute="bottom" constant="7" id="5l2-7I-TLl"/>
-                <constraint firstItem="hNX-7m-21M" firstAttribute="leading" secondItem="IYT-CC-OAr" secondAttribute="leading" id="EGG-wk-2Cs"/>
+                <constraint firstItem="688-WW-aIg" firstAttribute="centerY" secondItem="hNX-7m-21M" secondAttribute="centerY" constant="1.5" id="IJB-5e-YN1"/>
                 <constraint firstAttribute="trailing" secondItem="Uxc-fF-3Id" secondAttribute="trailing" constant="10" id="Ial-UZ-XP2">
                     <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                 </constraint>
                 <constraint firstItem="IYT-CC-OAr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="Mgh-EK-enc">
                     <variation key="heightClass=regular-widthClass=compact" constant="70"/>
                 </constraint>
-                <constraint firstItem="688-WW-aIg" firstAttribute="centerY" secondItem="hNX-7m-21M" secondAttribute="centerY" constant="-0.25" id="PPi-9B-Alu"/>
-                <constraint firstItem="IYT-CC-OAr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="TIt-FM-JSL"/>
+                <constraint firstItem="IYT-CC-OAr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="TIt-FM-JSL">
+                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                </constraint>
+                <constraint firstAttribute="trailing" secondItem="688-WW-aIg" secondAttribute="trailing" constant="20" id="TuQ-Pk-Cbh">
+                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                </constraint>
                 <constraint firstItem="hNX-7m-21M" firstAttribute="top" secondItem="IYT-CC-OAr" secondAttribute="bottom" constant="8" id="Tug-3R-zEo">
                     <variation key="heightClass=regular-widthClass=compact" constant="10"/>
                 </constraint>
                 <constraint firstItem="Uxc-fF-3Id" firstAttribute="top" secondItem="hNX-7m-21M" secondAttribute="bottom" constant="7" id="YOE-W1-2Cu"/>
                 <constraint firstAttribute="bottom" secondItem="Uxc-fF-3Id" secondAttribute="bottom" id="YOG-hY-rNS"/>
-                <constraint firstItem="688-WW-aIg" firstAttribute="leading" secondItem="hNX-7m-21M" secondAttribute="trailing" constant="17.5" id="ZI0-yV-S5w"/>
                 <constraint firstAttribute="trailing" secondItem="IYT-CC-OAr" secondAttribute="trailing" constant="71" id="cL6-BN-1Az">
-                    <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
                 </constraint>
-                <constraint firstItem="hNX-7m-21M" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="t6l-0H-Vcg"/>
-                <constraint firstItem="688-WW-aIg" firstAttribute="baseline" secondItem="hNX-7m-21M" secondAttribute="baseline" constant="1.5" id="ztX-8d-sih"/>
+                <constraint firstItem="hNX-7m-21M" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="qcf-K9-wO0">
+                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                </constraint>
             </constraints>
             <variation key="default">
                 <mask key="subviews">
                     <exclude reference="IYT-CC-OAr"/>
                     <exclude reference="hNX-7m-21M"/>
-                    <exclude reference="Uxc-fF-3Id"/>
                     <exclude reference="688-WW-aIg"/>
+                    <exclude reference="Uxc-fF-3Id"/>
                 </mask>
                 <mask key="constraints">
                     <exclude reference="Mgh-EK-enc"/>
                     <exclude reference="TIt-FM-JSL"/>
                     <exclude reference="cL6-BN-1Az"/>
-                    <exclude reference="EGG-wk-2Cs"/>
                     <exclude reference="Tug-3R-zEo"/>
-                    <exclude reference="t6l-0H-Vcg"/>
-                    <exclude reference="PPi-9B-Alu"/>
-                    <exclude reference="ZI0-yV-S5w"/>
-                    <exclude reference="ztX-8d-sih"/>
+                    <exclude reference="qcf-K9-wO0"/>
                     <exclude reference="3km-fe-hNV"/>
-                    <exclude reference="5l2-7I-TLl"/>
                     <exclude reference="Ial-UZ-XP2"/>
                     <exclude reference="YOE-W1-2Cu"/>
                     <exclude reference="YOG-hY-rNS"/>
+                    <exclude reference="IJB-5e-YN1"/>
+                    <exclude reference="TuQ-Pk-Cbh"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="subviews">
                     <include reference="IYT-CC-OAr"/>
                     <include reference="hNX-7m-21M"/>
-                    <include reference="Uxc-fF-3Id"/>
                     <include reference="688-WW-aIg"/>
+                    <include reference="Uxc-fF-3Id"/>
                 </mask>
                 <mask key="constraints">
                     <include reference="Mgh-EK-enc"/>
                     <include reference="TIt-FM-JSL"/>
                     <include reference="cL6-BN-1Az"/>
-                    <include reference="EGG-wk-2Cs"/>
                     <include reference="Tug-3R-zEo"/>
-                    <include reference="t6l-0H-Vcg"/>
-                    <include reference="PPi-9B-Alu"/>
-                    <include reference="ZI0-yV-S5w"/>
-                    <include reference="ztX-8d-sih"/>
+                    <include reference="qcf-K9-wO0"/>
                     <include reference="3km-fe-hNV"/>
-                    <include reference="5l2-7I-TLl"/>
                     <include reference="Ial-UZ-XP2"/>
                     <include reference="YOE-W1-2Cu"/>
                     <include reference="YOG-hY-rNS"/>
+                    <include reference="IJB-5e-YN1"/>
+                    <include reference="TuQ-Pk-Cbh"/>
                 </mask>
             </variation>
         </view>
